src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>APPROVAZIONE__c</fullName>
        <label>Approvazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chiave_Prodotto__c</fullName>
        <externalId>true</externalId>
        <label>Chiave Prodotto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Prodotto_EAN__c</fullName>
        <label>Codice Prodotto EAN</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consenso_Recesso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consenso Recesso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disponibilit_Prodotto__c</fullName>
        <label>Disponibilità Prodotto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marchio_Prodotto__c</fullName>
        <label>Marchio Prodotto</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sommario_Esteso__c</fullName>
        <label>Sommario Esteso</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
        <language>en_US</language>
    </listViews>
</CustomObject>